RESOLVED FIXED 220617
[WebAuthn] Polish the new WebAuthn UI
https://bugs.webkit.org/show_bug.cgi?id=220617
Summary [WebAuthn] Polish the new WebAuthn UI
Jiewen Tan
Reported 2021-01-14 00:02:11 PST
Polish the new WebAuthn UI.
Attachments
Patch (15.04 KB, patch)
2021-01-14 00:14 PST, Jiewen Tan
no flags
Patch (15.05 KB, patch)
2021-01-14 12:30 PST, Jiewen Tan
ews-feeder: commit-queue-
Patch (15.08 KB, patch)
2021-01-14 13:06 PST, Jiewen Tan
no flags
Patch (15.49 KB, patch)
2021-01-15 17:28 PST, Jiewen Tan
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-14 00:02:41 PST
Jiewen Tan
Comment 2 2021-01-14 00:14:14 PST
Jiewen Tan
Comment 3 2021-01-14 12:30:14 PST
Jiewen Tan
Comment 4 2021-01-14 13:06:27 PST
Jiewen Tan
Comment 5 2021-01-15 17:28:03 PST
Brent Fulgham
Comment 6 2021-01-19 09:26:49 PST
Comment on attachment 417751 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417751&action=review r=me > Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:-68 > - ASSERT(!RunLoop::isMain()); Why is it okay to remove this assertion? Should we be asserting that we are on the main runloop when UI is being presented?
Jiewen Tan
Comment 7 2021-01-19 10:39:53 PST
Comment on attachment 417751 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417751&action=review Thanks Brent for r+ this patch. >> Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:-68 >> - ASSERT(!RunLoop::isMain()); > > Why is it okay to remove this assertion? Should we be asserting that we are on the main runloop when UI is being presented? Just figured that the UI SPI could bail out early on the main thread and in Cocoa API there isn't any guarantees which thread the callback is going to be executed. So we shouldn't assume any.
EWS
Comment 8 2021-01-19 13:28:01 PST
Committed r271613: <https://trac.webkit.org/changeset/271613> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417751 [details].
Note You need to log in before you can comment on or make changes to this bug.